update java code + added module Jung-Layouting for force directed drawing with WSPD etc.